Only stop recording Chrome stability metrics during destruction.

BUG=803621

Change-Id: I2a028ce864808a88f71c0b0a0e0d3f493e0f1f77
Reviewed-on: https://chromium-review.googlesource.com/940616
Reviewed-by: Steven Holte <holte@chromium.org>
Commit-Queue: Will Harris <wfh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540773}
Former-commit-id: a613a90c3a45fa037344903d0c00f5b43add78c2